# bybit-info-telegram-bot

./: .env.example  Dockerfile  Readme.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
app/: config.py  signals.py
app/background_tasks/: __init__.py  bybit.py
app/bot/: commands.py  instance.py  middleware.py
app/bot/handlers/: __init__.py  balance.py  cookies.py  secret_key.py  start.py
app/bybit/: api.py  consts.py
app/database/: __init__.py  config.py  models.py
app/utils/: bybit_api.py  datetime.py  exceptions.py  logging.py  notifiers.py  scheduler.py  updaters.py
migrations/models/: 1_20250220213703_update.py  2_20250220215021_update.py  3_20250220220243_update.py  4_20250221133645_update.py
